Wrap thumbnail controls in collapsible box (fixes #5)
The box can be opened and closed by clicking on the title.

--- a/style.css
+++ b/style.css
@@ -98,6 +98,30 @@ input[type="number"] {
     font-weight: bold;
 }
 
+.box {
+    margin: 12px 0px;
+    background-color: #fafafa;
+    border: thin solid #888;
+    border-radius: 3px;
+}
+
+.box .title {
+    margin: 0;
+    padding: 6px;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #aaa;
+}
+
+.box .title:hover {
+    color: #444;
+    cursor: pointer;
+}
+
+.box .content {
+    padding: 6px;
+}
+
 #log {
     display: none;
     position: absolute;
